# hermes-skillopt

./: .gitignore  CONFORMANCE.md  README.md  UPSTREAM.md  __init__.py  plugin.yaml  pyproject.toml
docs/: architecture-gap.md  architecture.md  production-ci-cookbook.md  release-notes.md  usage-policy.md
examples/curated_replay/: demo.jsonl
examples/evals/: hermes_skill_safety_production_v1.json  hermes_skill_safety_static_review_v1.json  hermes_tool_use_production_v1.json  hermes_tool_use_static_review_v1.json  tiktok_seedance_thermal_v4.json
hermes_skillopt/: __init__.py  batch.py  benchmark_bridge.py  bounded_edit.py  cli.py  conformance.py  core.py  env.py  eval_packs.py  gate.py  multi_agent.py  optimizer.py  safety.py  sandbox_runner.py  skill_quality.py  skill_types.py  state.py  target.py  trainer.py  transfer.py  webui.py  webui_api.py  webui_pwa.py  webui_server.py
hermes_skillopt/eval_packs/: hermes_native_core_v1.json
hermes_skillopt/webui_static/: index.html
hermes_skillopt/webui_static/assets/: index-BS4oPHv7.js  (+8 more)
scripts/: install_local.sh  update_upstream.sh
tests/: skillopt_test_fixtures.py  test_bounded_edit.py  test_core.py  test_guided_ux.py  test_multi_agent.py  test_p0_p1_workflow_queue.py  test_p1_p2_batch_eval.py  test_p1a_eval_pack_policy.py  test_p1a_p1d_artifacts.py  test_p2_p3_digest_quality.py  test_p3.py  test_phase2_env_adapter.py  test_phase4_consistency.py  test_plugin_context.py  test_track_b_parity.py  test_webui.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css
