[project]
name = "hermes-skillopt"
version = "0.1.0"
description = "Hermes plugin for safe staged skill optimization with pinned Microsoft SkillOpt upstream tracking"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hermes-skillopt = "hermes_skillopt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
