[project]
name = "hermes-skillopt"
version = "0.1.0"
description = "Hermes plugin for safe staged skill optimization with pinned Microsoft SkillOpt upstream tracking"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
webui = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
hermes-skillopt = "hermes_skillopt.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_skillopt*"]

[tool.setuptools.package-data]
hermes_skillopt = ["eval_packs/*.json", "webui_static/*.html", "webui_static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
